--- a/css/_application.scss
+++ b/css/_application.scss
@@ -1,29 +1,33 @@
-body{
-    
-}
+
 footer{
     position: absolute;
     bottom:0px;
 }
-.test{
+
+.fond{
     position: relative;
-    height: 250px;
+    height: 220px;
     background-image: linear-gradient(to bottom, rgba(1, 128, 1, 0.479),$primary 90%), $urlfond;
-    background-size: cover;
-}       
-.test2{
-    position:absolute;
-    left: 40px;
-    top: 40px;
-    height: 200px;
-    width: 200px;
-    background-image: $urlphoto;
     background-size: cover;
 }
 
-.titre{
-    position:absolute;
-    left: 250px;
-    top: 40px;
+.entete2{
+   
+}
+.entete{
+    
+    padding-top: 20px;
+    
+    text-align: center;
+}       
+
+
+.entete-nom{
+    width: 250px;
+    vertical-align: middle;
+    text-align: center;
+  
+    
     color: #ffffff;
+    display: inline-block;
 }
