--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,5 +1,5 @@
 //#018001
 $primary:#018001;
-$site:"http://localhost:8080/sitejerome";
+$site:"https://pharmacien-remplacement.fr";
 $urlphoto:url( $site +"/dist/images/js.png");
 $urlfond:url($site + "/dist/images/pharma2.jpg");
