--- a/css/_application.scss
+++ b/css/_application.scss
@@ -1,6 +1,6 @@
 
 footer{
-    position: absolute;
+    position: relative;
     bottom:0px;
 }
 .bg-entete{
@@ -21,4 +21,11 @@ footer{
     text-align: center;
     color: #ffffff;
     display: inline-block;
+}
+.phone{
+    color: $primary;
+}
+ul li
+{
+   list-style-type: none;
 }
